@@ -1,9 +1,9 @@
 ;;; mock-lsp-server.el --- Mock LSP server                       -*- lexical-binding: t; -*-
 
-;; Copyright (C) 2024-2024 emacs-lsp maintainers
+;; Copyright (C) 2024-2025 emacs-lsp maintainers
 
 ;; Author: Arseniy Zaostrovnykh
-;; Package-Requires: ((emacs "27.1"))
+;; Package-Requires: ((emacs "28.1"))
 ;; Version: 0.1.0
 ;; License: GPL-3.0-or-later
 
